Fixed annual fee batch job and savings charges related issues

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -11121,6 +11121,21 @@ GET https://DomainName/api/v1/charges/template
            "id": 2,
            "code": "chargeTimeType.specifiedDueDate",
            "value": "Specified due date"
+       },
+       {
+       	    "id": 3,
+       	    "code": "chargeTimeType.savingsActivation",
+       	    "value": "Savings Activation"
+       },
+       {
+       	    "id": 5,
+       	    "code": "chargeTimeType.withdrawalFee",
+       	    "value": "Withdrawal Fee"
+       },
+       {
+       	    "id": 6,
+       	    "code": "chargeTimeType.annualFee",
+       	    "value": "Annual Fee"
        }
    ],
    "chargePaymetModeOptions":
