--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -11231,7 +11231,7 @@ Request Body:
     "amount": "230.56",
     "chargeTimeType": "1",
     "chargeCalculationType": "1",
-    "chargePaymentMode": "1"
+    "chargePaymentMode": "1",
     "active": true
 }
 					</code>
@@ -11252,7 +11252,7 @@ Request Body:
   "chargeAppliesTo": "1",
   "chargeTimeType": "2",
   "chargeCalculationType": "2",
-  "chargeCalculationType": "1",
+  "chargePaymentMode": "1",
   "active": "true",
   "penalty": "true"
 }
@@ -11275,6 +11275,7 @@ Request Body:
   "chargeAppliesTo": "2",
   "chargeTimeType": "6",
   "chargeCalculationType": "1",
+  "chargePaymentMode": "1",
   "active": "true",
   "penalty": "false"
 }
