Mifosx-735 api docs update

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -18408,7 +18408,9 @@ GET https://DomainName/api/v1/glaccounts
 	"tagId": {
 	  "id": 10,
 	  "name": "asset tag"
-	}
+	},
+	"officeRunningBalance":12030,
+        "organizationRunningBalance": 118437,
     },
     {
         "id": 15,
@@ -18426,7 +18428,9 @@ GET https://DomainName/api/v1/glaccounts
             "code": "accountUsage.detail",
             "value": "DETAIL"
         },
-        "description": "Desc"
+        "description": "Desc",
+	"officeRunningBalance":12030,
+        "organizationRunningBalance": 118437,
     }
 ]
                     </code>
@@ -18711,7 +18715,9 @@ GET https://DomainName/api/v1/glaccounts/{glaccountsId}
         "code": "accountUsage.detail",
         "value": "DETAIL"
     },
-    "description": "Desc"
+    "description": "Desc",
+    "officeRunningBalance":12030,
+    "organizationRunningBalance": 118437,
 }
                     </code>
                 </div>
