added roles in the api call for users

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -17909,7 +17909,14 @@ GET https://DomainName/api/v1/users
         "officeName": "Head Office",
         "firstname": "App",
         "lastname": "Administrator",
-        "email": "demomfi@mifos.org"
+        "email": "demomfi@mifos.org",
+	"selectedRoles": [
+            {
+                "id": 1,
+                "name": "Super user",
+                "description": "This role provides all application permissions."
+            }
+        ]
     }
 ]
 					</code>
