--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -19510,7 +19510,15 @@ GET https://DomainName/api/v1/journalentries?transactionId=PB37X8Y21EQUY4S
       "reversed": false,
 	  "officeRunningBalance":0,
 	  "organizationRunningBalance":0
-	  "runningBalanceComputed":false
+	  "runningBalanceComputed":false ,
+       "paymentDetails": {
+        "accountNumber": "",
+        "checkNumber": "",
+        "receiptNumber": "ddddd",
+        "bankNumber": "",
+        "routineCode": "",
+        "paymentType": "Cash"
+        }
     },
     {
       "id": 2,
@@ -19553,7 +19561,15 @@ GET https://DomainName/api/v1/journalentries?transactionId=PB37X8Y21EQUY4S
       "reversed": false,
 	  "officeRunningBalance":0,
 	  "organizationRunningBalance":0
-	  "runningBalanceComputed":false
+	  "runningBalanceComputed":false,
+      "paymentDetails": {
+        "accountNumber": "",
+        "checkNumber": "",
+        "receiptNumber": "ddddd",
+        "bankNumber": "",
+        "routineCode": "",
+        "paymentType": "Cash"
+       }
 
     }
   ]
